[package]
name = "webrtcsink_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# gst
gst = { package = "gstreamer", git = "https://github.com/sdroege/gstreamer-rs", features = ["v1_20", "ser_de"] }
gst-sdp = { package = "gstreamer-sdp", git = "https://github.com/sdroege/gstreamer-rs", features = ["v1_20"] }
gst-video = { package = "gstreamer-video", git = "https://github.com/sdroege/gstreamer-rs", features = ["v1_20", "ser_de"] }
gst-webrtc = { package = "gstreamer-webrtc", git = "https://github.com/sdroege/gstreamer-rs", features = ["v1_20"] }

# error handling
color-eyre = "0.6"
eyre = "0.6"

# logging
env_logger = "0.9"
log = "0.4"

# tokio
tokio = {version = "1.15", features = ["time", "rt-multi-thread", "macros", "signal", "net"]}

# webrtcsink

## 2. tokio1 feature enabled in async-std
## this starts the siganeller but errors out with there is no reactor running, must be called from the context of a Tokio 1.x runtime at this line
## in `handle_sdp`
webrtcsink = { git = "https://github.com/praveenperera/webrtcsink.git", branch = "tokio1" }

## 3. Replacing async-std with tokio tasks (https://github.com/praveenperera/webrtcsink/tree/tokio), the custom signaller does not start and get `there is no reactor running, must be called from the context of a Tokio 1.x runtime`
# webrtcsink = { git = "https://github.com/praveenperera/webrtcsink.git", branch = "tokio" }

## 4. Creating a new tokio runtime (https://github.com/praveenperera/webrtcsink/tree/tokio-new-runtime), I don't get the reactor not running error but the custom signaller does not start
# webrtcsink = { git = "https://github.com/praveenperera/webrtcsink.git", branch = "tokio-new-runtime" }

# utils
once_cell = "1.0"
