[package]
name = "webrtcsink_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# gst

gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_20", "ser_de"] }
gst-webrtc = { package = "gstreamer-webrtc", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_20"] }
gst-sdp = { package = "gstreamer-sdp", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_20"] }

# error handling
color-eyre = "0.6"
eyre = "0.6"

# logging
env_logger = "0.9"
log = "0.4"

# tokio
tokio = {version = "1.15", features = ["time", "rt-multi-thread", "macros", "signal", "net"]}

async-std = { version = "1", features = ["unstable", "tokio1"] }

# webrtcsink

webrtcsink = { git = "https://github.com/centricular/webrtcsink.git" }

# utils
once_cell = "1.0"
